Removes the body of the functions that need to be completed

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
@@ -466,13 +466,13 @@
     "\t##########################################\n",
     "        \n",
     "\tdef init_parameters(self):\n",
-    "\t\tself.Nn = 8\n",
-    "\t\tself.eta_0 = 0.1\n",
-    "\t\tself.sigma_0 = 1.0        \n",
-    "\t\tself.tau_2 = 1000.0\n",
-    "\t\tself.tau_1 = 100.0\n",
-    "\t\tself.N_trials = 100.0\n",
-    "\t\tself.lattice_limit = [-3.0, 3.0]\n",
+    "\t\tself.Nn = 0\n",
+    "\t\tself.eta_0 = 0.0\n",
+    "\t\tself.sigma_0 = 0.0        \n",
+    "\t\tself.tau_2 = 0.0\n",
+    "\t\tself.tau_1 = 0.0\n",
+    "\t\tself.N_trials = 0\n",
+    "\t\tself.lattice_limit = [0, 0]\n",
     "\n",
     "\n",
     "\t#########################################\n",
@@ -480,17 +480,11 @@
     "\t#########################################\n",
     "\n",
     "\tdef run_trial(self):\n",
-    "\t\tmix = self.shuffle_data();\n",
-    "\t\tfor i in range(self.pos.shape[0]):\n",
-    "\t\t\tself.run_episode(mix, i)\n",
+    "\t\tpass\n",
     "\n",
     "\n",
     "\tdef run_episode(self, mix, i):\n",
-    "\t\tpt = self.pos[mix[i]]\n",
-    "\t\td = self.squared_distance(pt)\n",
-    "\t\t[lx,ly] = self.get_winner(d)\n",
-    "\t\th = self.neighborhood_function(lx[0],ly[0])\n",
-    "\t\tself.update_lattice(h,pt)\n",
+    "\t\tpass\n",
     "\n",
     "\n",
     "\t##########################################\n",
@@ -498,31 +492,23 @@
     "\t##########################################\n",
     "\n",
     "\tdef shuffle_data(self):\n",
-    "\t\tmix = np.arange(self.pos.shape[0])\n",
-    "\t\tnp.random.shuffle(mix)\n",
-    "\t\treturn mix\n",
+    "\t\tpass\n",
     "\n",
     "\n",
     "\tdef squared_distance(self, pt):\n",
-    "\t\treturn np.linalg.norm(self.lattice - pt,axis=2)**2\n",
+    "\t\tpass\n",
     "\n",
     "\n",
     "\tdef get_winner(self,d):\n",
-    "\t\treturn np.where(d == d.min())\n",
+    "\t\tpass\n",
     "\n",
     "\n",
     "\tdef neighborhood_function(self,lx,ly):\n",
-    "\t\th = np.zeros((self.Nn,self.Nn))\n",
-    "\t\tfor i in range(self.Nn):\n",
-    "\t\t\tfor j in range(self.Nn):\n",
-    "\t\t\t\tdist = (i-lx)**2 + (j-ly)**2\n",
-    "\t\t\t\th[i,j] = np.exp(-dist/(2*self.sigma()**2))\n",
-    "\t\treturn h\n",
+    "\t\tpass\n",
     "\n",
     "\n",
     "\tdef update_lattice(self,h,pt):\n",
-    "\t\tfor i in range(self.lattice.shape[2]):\n",
-    "\t\t\tself.lattice[:,:,i] += self.eta()*h*((pt-self.lattice)[:,:,i])\n",
+    "\t\tpass\n",
     "    \n",
     "\n",
     "\t#########################################\n",
@@ -530,11 +516,11 @@
     "\t#########################################\n",
     "\n",
     "\tdef eta(self):\n",
-    "\t\treturn self.eta_0*np.exp(-self.trial/self.tau_2)\n",
+    "\t\tpass\n",
     "\n",
     "\n",
     "\tdef sigma(self):\n",
-    "\t\treturn self.sigma_0*np.exp(-self.trial/self.tau_1)"
+    "\t\tpass"
    ]
   },
   {
