--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
@@ -578,13 +578,13 @@
     "    ################################################\n",
     "\n",
     "    def init_parameters(self): \n",
-    "        self.N_episodes = 10000\n",
-    "        self.tau = self.N_episodes / 4 # time parameter used to define an epsilon(tau)-greedy policy\n",
-    "        self.eta = 0.3\n",
-    "        self.gamma = 0.8\n",
-    "        self.lambda_e = 0.6\n",
-    "        self.goal_reward = 10.0\n",
-    "        self.Q = numpy.zeros((self.Nn, self.Nn,4))\n",
+    "        self.N_episodes = 0\n",
+    "        self.tau = self.N_episodes / 1.0 # time parameter used to define an epsilon(tau)-greedy policy\n",
+    "        self.eta = 0.0\n",
+    "        self.gamma = 0.0\n",
+    "        self.lambda_e = 0.0\n",
+    "        self.goal_reward = 0.0\n",
+    "        self.Q = numpy.zeros((self.Nn, self.Nn, 4))\n",
     "\n",
     "\n",
     "    ################################################\n",
@@ -592,17 +592,7 @@
     "    ################################################\n",
     "\n",
     "    def init_episode(self):\n",
-    "        self.e = numpy.zeros((self.Nn,self.Nn,4))\n",
-    "        self.epsilon = np.exp(-self.episode/(self.tau/1.0))\n",
-    "        self.latency = 0.0\n",
-    "\n",
-    "        # pick at random an initial state for each new episode\n",
-    "        while True:\n",
-    "            self.x_start = numpy.random.randint(0, self.Nn)\n",
-    "            self.y_start = numpy.random.randint(0, self.Nn)\n",
-    "            if self.is_state_available(self.x_start, self.y_start): break\n",
-    "\n",
-    "        self.state_x = self.x_start; self.state_y = self.y_start\n",
+    "        pass\n",
     "        self.select_action()\n",
     "\n",
     "\n",
@@ -620,32 +610,27 @@
     "\n",
     "    def update_state(self):\n",
     "        # remember the previous state of the agent\n",
-    "        self.prev_state_x = self.state_x\n",
-    "        self.prev_state_y = self.state_y\n",
+    "        pass\n",
     "\n",
     "        # update the agent state according to the action\n",
     "        # move down\n",
-    "        if self.action == 0: self.state_x += 1\n",
+    "        pass\n",
     "        # move up\n",
-    "        elif self.action == 1: self.state_x -= 1\n",
+    "        pass\n",
     "        # move right\n",
-    "        elif self.action == 2: self.state_y += 1\n",
+    "        pass\n",
     "        # move left\n",
-    "        elif self.action == 3: self.state_y -= 1\n",
+    "        pass\n",
     "\n",
     "\n",
     "    def update_eligibility_trace(self):\n",
     "        # update the eligibility trace matrix\n",
-    "        self.e = self.lambda_e * self.e\n",
-    "        self.e[self.prev_state_x, self.prev_state_y, self.prev_action] += 1.\n",
+    "        pass\n",
     "\n",
     "\n",
     "    def update_Q_values(self):\n",
     "        # update the Q-values\n",
-    "        self.Q +=  self.eta * self.e * \\\n",
-    "                      (self.get_reward() - \\\n",
-    "                      (self.Q[self.prev_state_x,self.prev_state_y,self.prev_action] - \\\n",
-    "                       self.gamma * self.Q[self.state_x, self.state_y, self.action]))\n",
+    "        pass\n",
     "\n",
     "\n",
     "    #############################################\n",
@@ -654,31 +639,11 @@
     "\n",
     "    # select the next action according to an epsilon-greedy policy\n",
     "    def select_action(self):\n",
-    "        self.prev_action = self.action\n",
-    "        i = None\n",
-    "        available_actions = self.actions[self.state_x][self.state_y]\n",
-    "        if numpy.random.rand() < self.epsilon:\n",
-    "            i = numpy.random.randint(len(available_actions))\n",
-    "        else:\n",
-    "            i = argmax(self.Q[self.state_x, self.state_y, available_actions])\n",
-    "        self.action = available_actions[i]\n",
+    "        pass\n",
     "\n",
     "\n",
     "    def get_reward(self):\n",
-    "        # Look at next state, is it the goal?\n",
-    "        # move down\n",
-    "        if   self.prev_action == 0: self.pos_x = self.prev_state_x + 1; self.pos_y = self.prev_state_y\n",
-    "        # move up\n",
-    "        elif self.prev_action == 1: self.pos_x = self.prev_state_x - 1; self.pos_y = self.prev_state_y\n",
-    "        # move right\n",
-    "        elif self.prev_action == 2: self.pos_y = self.prev_state_y + 1; self.pos_x = self.prev_state_x\n",
-    "        # move left\n",
-    "        elif self.prev_action == 3: self.pos_y = self.prev_state_y - 1; self.pos_x = self.prev_state_x\n",
-    "\n",
-    "        # return an actual reward\n",
-    "        if (self.pos_x == self.goal_position[0]) and (self.pos_y == self.goal_position[1]):\n",
-    "            return self.goal_reward\n",
-    "        else: return 0.0\n",
+    "        pass\n",
     "\n",
     "\n",
     "    #########################################\n",
@@ -687,13 +652,11 @@
     "\n",
     "    def is_episode_over(self):\n",
     "        # check if the agent has reached the goal OR if the latency exceeds the limit\n",
-    "        return (self.get_reward() == self.goal_reward) or (self.latency >= self.Nn*self.Nn)\n",
+    "        pass\n",
     "\n",
     "\n",
     "    def is_state_available(self, x, y):\n",
-    "        if len(self.actions[x][y]) == 0.0:\n",
-    "            return False\n",
-    "        else: return True"
+    "        pass"
    ]
   },
   {
