Sets the VirtualCoach environment to staging (Miniproject0)

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject0.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject0.ipynb
@@ -375,7 +375,7 @@
     "print(\"Retrieving your HBP OIDC token\")\n",
     "token = str(oauth.get_token())\n",
     "print(\"token retrieved!\")\n",
-    "vc = VirtualCoach(environment='dev', oidc_token=token)"
+    "vc = VirtualCoach(environment='staging', oidc_token=token)"
    ]
   },
   {
@@ -544,7 +544,7 @@
     "print(\"token retrieved!\")\n",
     "\n",
     "# Fill in your password when prompted\n",
-    "vc = VirtualCoach(environment='dev', oidc_token=token)\n",
+    "vc = VirtualCoach(environment='staging', oidc_token=token)\n",
     "vc.print_cloned_experiments()\n",
     "\n",
     "# Launch Mini-project 0's experiment for a sufficiently long time\n",
