[FIX] Fixes naming errors reported by neurosimstudent_a on the edX forum

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
@@ -375,7 +375,7 @@
     "\n",
     "****\n",
     "\n",
-    "The **result** of the main function **`run_som()`** is the self-organized map, also called feature map. This map is saved into the file  `lattice.csv` (visualized as red lattice in the forthcoming cells). You can upload this file into your Collab <span style=\"background-color: #f6d351\">Storage</span> via the command [C.2. Upload SOM training result into Collab's storage](#C2). <br>\n",
+    "The **result** of the main function **`run()`** is the self-organized map, also called feature map. This map is saved into the file  `lattice.csv` (visualized as red lattice in the forthcoming cells). You can upload this file into your Collab <span style=\"background-color: #f6d351\">Storage</span> via the command [C.2. Upload SOM training result into Collab's storage](#C2). <br>\n",
     "****"
    ]
   },
@@ -441,12 +441,12 @@
     "        \n",
     "\n",
     "\t# function to run SOM training\n",
-    "\tdef run_som(self):       \n",
+    "\tdef run(self):       \n",
     "\t\tT,f,self.Nn = self.somad.som_preparation(self.N_trials,self.Nn,self.display)\n",
     "        \n",
     "\t\t\"\"\"     SOM algorithm     \"\"\"\n",
     "\t\tself.lattice = np.random.uniform(self.lattice_limit[0],self.lattice_limit[1],(self.Nn,self.Nn,2))\n",
-    "\t\tself.pos = self.somad.load_data(self.csv_file)\n",
+    "\t\tself.pos = self.somad.load_data(self.csv_input_positions)\n",
     "\t\tself.trial = 0\n",
     "\t\twhile(self.trial < self.N_trials):\n",
     "\t\t\tself.run_trial()\n",
@@ -569,7 +569,7 @@
     "# Instantiate your SOM class\n",
     "som = SOM(diplay='visualization', csv_output_lattice='lattice.csv') \n",
     "# Run the simulation and visualize the whole process; the result will be saved into the file 'lattice.csv'\n",
-    "som.run_som() \n",
+    "som.run() \n",
     "```"
    ]
   },
