Fixes naming error reported by neurosimstudent_a (run_evaluation() --> run())

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
@@ -660,7 +660,7 @@
     "# Evaluation of the SOM training\n",
     "from epflx_robox_nrp_utils.SOM.SOM_evaluation import SOM_evaluation\n",
     "somev = SOM_evaluation()\n",
-    "var, N = somev.run_evaluation()\n",
+    "var, N = somev.run()\n",
     "print \"Your score is \", var, \"with SOM size (\", N, \"x\", N,\").\""
    ]
   },
