Warnings about delayed disclosure of marks

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
@@ -262,9 +262,9 @@
     "### B.1. Description of the SOM class <a id='B1'></a>\n",
     "****\n",
     "\n",
-    "</br><div style=\"text-align: justify\">**Your task** is to implement the SOM algorithm and to apply it tp the dataset `robot_positions.csv` obtained in **Mini-project 0**. The template of the SOM class is located in part [B.2. Complete SOM function (TO DO)](#B2). Once you have filled in all the gaps, you will run the algorithm on the aforementioned data set. </div>\n",
+    "</br><div style=\"text-align: justify\">**Your task** is to implement the SOM algorithm and to apply it to the dataset `robot_positions.csv` obtained in **Mini-project 0**. The template of the SOM class is located in part [B.2. Complete SOM function (TO DO)](#B2). Once you have filled in all the gaps, you will run the algorithm on the aforementioned data set. </div>\n",
     "\n",
-    "</br><div style=\"text-align: justify\">The **SOM class template** consists of two parts: **1) `Self-Organizing Map initialization`** and **2) `TO DO`**. The first part allows you to run, to initialize and to visualize the SOM ordering and converging processes thanks to functions of the `SOM_additional` module. These additional functions are already implemented and you shouldn't change them. As for the <font color=red>**\"TO DO\" part**</font>, this is  <font color=red>**your assignement**</font>. </div>\n",
+    "</br><div style=\"text-align: justify\">The **SOM class template** consists of two parts: **1) `Self-Organizing Map initialization`** and **2) `TO DO`**. The first part allows you to run, to initialize and to visualize the SOM ordering and converging processes thanks to functions of the `SOM_additional` module. These additional functions are already implemented and you shouldn't change them. <font color=red>**As for the TO DO part, this is your assignement**</font>. </div>\n",
     "\n",
     "</br><div style=\"text-align: justify\"> The script in [B.2. Complete SOM function (TO DO)](#B2) represents the SOM algorithm which is summarized below.</div>"
    ]
@@ -674,7 +674,9 @@
     "\n",
     "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/som_submission.png)\n",
     "\n",
-    "In order to submit your SOM implementation, run the next cell. Each submission is automatically tested and evaluated. Only the last submission will be taken into account for your grade. <font color=red>**Keep in mind that the grading process has a timeout of 240 seconds.**</font>"
+    "In order to submit your SOM implementation, run the next cell. Each submission is automatically tested and evaluated. Only the last submission will be taken into account for your mark. \n",
+    "- <font color=red>**Keep in mind that the grading process has a timeout of 240 seconds.**</font>\n",
+    "- <font color=red>**Your mark will be disclosed in edX only after inspection of the results and of the code. This may imply a significant delay**</font>. "
    ]
   },
   {
