--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
@@ -890,7 +890,9 @@
     "\n",
     "First, make sure you have saved your SARSA implementation to your Collab <span style=\"background-color: #f6d351\">Storage</span>, i.e., check the steps of [C.3. Upload your SARSA class implementation into the Collab](#C3). \n",
     "\n",
-    "Then run the next cell to submit your SARSA implementation. Each submission is automatically tested and evaluated. Only the last submission will be taken into account for your grade. <font color=red>**Keep in mind that the grading process has a timeout of 240 seconds</font>**.</div>"
+    "Then run the next cell to submit your SARSA implementation. Each submission is automatically tested and evaluated. Only the last submission will be taken into account for your mark. \n",
+    "- <font color=red>**Keep in mind that the grading process has a timeout of 240 seconds</font>**.\n",
+    "- <font color=red>**Your mark will be disclosed in edX only after inspection of the results and of the code. This may imply a significant delay.**</font>"
    ]
   },
   {
