Fixes several issues:  *  wrong name of output file argument (reported by neurosimstudent_a),  *  wrong URL of the NRP Webcockpit,  *  wrong name for the experiment folders of Mini-project0, 1 and 2.

--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject0.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject0.ipynb
@@ -107,7 +107,7 @@
     "scrolled": true
    },
    "source": [
-    "- Join the [NRP Web Cockpit](http://148.187.96.224/#/esv-private?dev) and select the ***Templates*** tab. Your browser view is depicted below."
+    "- Join the [NRP Web Cockpit](http://148.187.97.48/#/esv-private?dev) and select the ***Templates*** tab. Your browser view is depicted below."
    ]
   },
   {
@@ -387,7 +387,7 @@
     "--------------------------------------\n",
     "__B.3.__ The next command will display the list of experiments located in your NRP storage (not to be confused with this Collab <span style=\"background-color: #f6d351\">Storage</span>). <font color=red>\n",
     "    \n",
-    "__Important:__</font> check that __*'Miniproject0_0'*__, possibly __*'Miniproject0_<font color=red>i</font>'*__ if there are *i+1* copies, is one of them."
+    "__Important:__</font> check that __*'mooc_miniproject0_0'*__, possibly __*'mooc_miniproject0_<font color=red>i</font>'*__ if there are *i+1* copies, is one of them."
    ]
   },
   {
@@ -409,7 +409,7 @@
    },
    "source": [
     "--------------------------------------\n",
-    "__B.4.__ Launch <font color=black>__*Miniproject0_i*__</font> 's  experiment. \n"
+    "__B.4.__ Launch <font color=black>__*mooc_miniproject0_i*__</font> 's  experiment. \n"
    ]
   },
   {
@@ -495,7 +495,7 @@
     "\n",
     "To do so, you will have to:\n",
     "\n",
-    "- input the name of __*Miniproject0_i*__ according to a list of experiments that you will print below, \n",
+    "- input the name of __*mooc_miniproject0_i*__ according to a list of experiments that you will print below, \n",
     "- input __simulation time__ in seconds. A sufficiently long time is not less than __900 seconds__.\n",
     "\n",
     "Once you have run an experiment, you can join the simulation via the [NRP Webcockpit](http://148.187.96.224/#/esv-private?dev) and check if the robot does a proper job. In the mean time, a transfer function is recording the robot position every 20 ms into the file `robot_positions.csv`."
