--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject1.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "- Open the <span style=\"background-color: #f6d351\">Week 1 - Mini-project 0 (Jupyter Notebook)</span> in your Collab's space.\n",
     "- Move to the part __\"C. Record the robot positions\"__.\n",
-    "- Execute __\"C. Record the robot positions\"__ using __Miniproject_<font color=red>1_i</font>__ from the list of NRP experiments you will obtain.\n",
+    "- Execute __\"C. Record the robot positions\"__ using __mooc_miniproject_<font color=red>1_i</font>__ from the list of NRP experiments you will obtain.\n",
     "\n",
     "**Remark:** Mini-project 1's experiment contains the solution of Mini-project 0."
    ]
