--- a/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/miniproject2.ipynb
@@ -278,7 +278,7 @@
     "sarsaad = SARSA_additional(\n",
     "    csv_input_positions='robot_positions.csv', \n",
     "    csv_input_lattice='lattice.csv', \n",
-    "    csv_output='actions.csv' # name of the output file containing all available actions\n",
+    "    csv_output_actions='actions.csv' # name of the output file containing all available actions\n",
     ")\n",
     "reward, actions = sarsaad.run_processing()"
    ]
@@ -872,7 +872,7 @@
     "- Download the files`lattice_data.csv` and `waypoints.csv` from your Collab <span style=\"background-color: #f6d351\">Storage</span>.\n",
     "- Join the [Neurorobotics platform](http://148.187.97.48/#/esv-private?dev) and select the ***Templates*** tab.\n",
     "- Select *Mini-project 2* in the list of Templates (use the search filter) and press the ***Clone*** button.\n",
-    "- Select the ***Experiment files*** tab and open the *Miniproject_2* folder.\n",
+    "- Select the ***Experiment files*** tab and open the *mooc_miniproject_2* folder.\n",
     "- Upload the files `lattice.csv` and `waypoints.csv` into the Experiment files storage.\n",
     "- Move back to the ***My experiments*** tab and launch ***\"Mini-project 2: Navigate ...\"***.\n",
     "- Run the simulation and check if the robot navigates through the specified waypoints."
